# Auto-Logger

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  tailscale-serve.json
bot/: config.py  main.py
bot/auth/: login_flow.py  playwright_pool.py  session_store.py  telegram_initdata.py
bot/handlers/: errors.py  start.py  submit_log.py
bot/pms/: selectors.py  submit_log.py
bot/utils/: keyboards.py  validators.py
bot/web/: app.py  coordinator.py
bot/web/templates/: login.html  mfa.html
tests/: test_initdata.py  test_session_store.py  test_validators.py
